# report-of-monaco-2018-racing

./: LICENSE  README.md  abbreviations.txt  main.py  pyproject.toml  report.py
src/f1_racing_reports/: report.py  web.py
src/f1_racing_reports/templates/: driver_info.html  driver_list.html  report.html
tests/: test_report.py
