[project]
name = "f1_racing_reports"
version = "0.0.1"
authors = [
  { name="Oleksandr Vasylenko", email="alexander_vasilenko@outlook.com" },
]
maintainers = [
  { name="Vit Melnychuk", email="playersoft1999@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"